--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
  <!-- CSS stylesheets -->
 
- <link rel="stylesheet" href="css/styles.css">
+ <link rel="stylesheet" href="Tindog/CSS/styles.css">
 
 </head>
 
