--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
  <!-- CSS stylesheets -->
 
- <link rel="stylesheet" href="https://prathamone.github.io/Tindog/CSS/styles.css">
+ <link rel="stylesheet" href="https://prathamone.github.io/styles.css">
 
 </head>
 
