--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
  <!-- CSS stylesheets -->
 
- <link rel="stylesheet" type="text/css" href="CSS/styles.css">
+ <link rel="stylesheet" type="text/css" href="https://github.com/prathamONE/Tindog/blob/4229389afb6013a33b60ad3d844dcaea95599b02/CSS/styles.css">
 
 </head>
 
